﻿Version 2.5.0
MVC 5
- Fixed missing image in Readme.html.
MVC 6
- Added a note to ReadMe.html to install the HttpPlatformHandler.
- Added a note for NPM file paths too long.

Version 2.4.0
MVC 5
- Added a more prominent comment about removing settings from Web.config when using older versions of IIS.
MVC 6
- Updated to Beta 8.
- HTML Helper constructors removed, so that they can be used as TagHelper's too.
- Added a JavaScript Code Style (JSCS) feature to turn add/remove JSCS.
- Added Several features to add/remove favicons, manifest.json, browserconfig.xml and web app capability.
- Added a feature to add/remove search.
- Added a feature to add/remove Atom feed.
- Added a feature to add/remove Sitemap.
- Added a feature to add/remove Robots.txt.
- Fixed feature to add/remove Humans.txt which was not removing markup from Index.cshtml.
- The OpenSearchService now uses the AppSettings.SiteTitle for the description.
- SitemapService and SitemapPingerService changed to use ILogger<T>, rather than ILoggerFactory.
- Startup.Debugging.cs modified to only add the console logger if running in the console using the WebListener server.
- Razor pre-compilation updated for Beta 8 in RazorPreCompilation.cs and Startup.cs.

Version 2.3.0
MVC 5 & 6
- Fixed a bug with the OpenGraphMedia type which was not handling HTTPS schemes correctly.
- Fixed a bug with the RedirectToCanonicalUrlAttribute which was not working if you turned off AppendTrailingSlash.
- Updated SitemapNode to check for null URL's and priorities out of range.
- SitemapService updated to enter the correct priorities for the sitemap nodes.
- Updated to use the latest version of the ASP.NET MVC Boilerplate Framework NuGet package with the above changes.
- Numerous bug fixes and improvements to the Twitter and Open Graph HTML helpers.
- strict mode added to Fallback scripts.js and styles.js as well as other jshint fixes.
- Numerous bug fixes and improvements to the Twitter and Open Graph HTML helpers.