@@ -97,7 +97,7 @@
     <!-- mode - Turn on/off custom error pages. See also httpErrors existingResponse. -->
     <customErrors mode="Off" />
     <!-- httpOnlyCookies - Ensure that external script cannot access the cookie. -->
-    <!-- requireSSL - Ensure that the cookie can only be transported over SSL. -->
+    <!-- requireSSL - Ensure that the cookie can only be transported over HTTPS. -->
     <httpCookies httpOnlyCookies="true" requireSSL="false" />
     <httpHandlers>
       <add path="glimpse.axd" verb="GET" type="Glimpse.AspNet.HttpHandler, Glimpse.AspNet" />
