@@ -5,6 +5,7 @@
 
   "dependencies": {
     "Boilerplate.Web.Mvc6": "2.0.0-beta8",
+    "Microsoft.AspNet.CookiePolicy": "1.0.0-beta8",
     "Microsoft.AspNet.Diagnostics": "1.0.0-beta8",
     "Microsoft.AspNet.IISPlatformHandler": "1.0.0-beta8",
     "Microsoft.AspNet.Mvc": "6.0.0-beta8",
